--- a/Desktop/AlandisWebsite/alandis-portfolio/src/components/navbar/navbar.scss
+++ b/Desktop/AlandisWebsite/alandis-portfolio/src/components/navbar/navbar.scss
@@ -11,8 +11,18 @@
     justify-content: space-between;
     height: 100%;
 
+    @include mobile {
+      justify-content: flex-end;
+      padding: 20px;
+    }
+
     span {
       font-weight: bold;
+      margin-left: 100px;
+
+      @include mobile {
+        display: none;
+      }
     }
 
     .social {
