--- a/Desktop/AlandisWebsite/alandis-portfolio/src/components/hero/hero.scss
+++ b/Desktop/AlandisWebsite/alandis-portfolio/src/components/hero/hero.scss
@@ -19,6 +19,14 @@
       justify-content: center;
       gap: 40px;
 
+      @include mobile {
+        height: 50%;
+        width: 100%;
+        gap: 20px;
+        align-items: center;
+        text-align: center;
+      }
+
       h2 {
         font-size: 30px;
         color: rebeccapurple;
@@ -27,10 +35,19 @@
 
       h1 {
         font-size: 88px;
+
+        @include mobile {
+          font-size: 36px;
+        }
       }
 
       .buttons {
+        position: relative;
+        z-index: 10;
+
         button {
+          z-index: 10;
+          position: relative;
           padding: 20px;
           border: 1px solid white;
           border-radius: 10px;
@@ -54,6 +71,13 @@
     top: 0;
     right: 0;
 
+    @include mobile {
+      height: 25%;
+      width: 25%;
+      top: unset;
+      bottom: 0;
+    }
+
     img {
       width: 100%;
       height: 100%;
@@ -69,5 +93,6 @@
     color: #ffffff09;
     width: 50%;
     font-weight: bold;
+    z-index: 1; /* Ensure it doesn't overlap buttons */
   }
 }
