--- a/Desktop/AlandisWebsite/alandis-portfolio/src/components/parallax/parallax.scss
+++ b/Desktop/AlandisWebsite/alandis-portfolio/src/components/parallax/parallax.scss
@@ -11,6 +11,11 @@
 
   h1 {
     font-size: 100px;
+
+    @include mobile {
+      font-size: 72px;
+      text-align: center;
+    }
   }
 
   .mountains {
@@ -22,23 +27,75 @@
     position: absolute;
     z-index: 3;
 
-    background-repeat: no-repeat;
+    @include mobile {
+      background-size: contain;
+      background-repeat: no-repeat;
+    }
+  }
+  .planets {
+    background-size: cover;
+    background-position: bottom;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 2;
+    @include mobile {
+      background-size: contain;
+      background-repeat: no-repeat;
+    }
+  }
+  .stars {
+    background-image: url("/stars.png");
+    background-size: cover;
+    background-position: bottom;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 1;
   }
 }
-.planets {
-  background-size: cover;
-  background-position: bottom;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: 2;
-}
-.stars {
-  background-image: url("/stars.png");
-  background-size: cover;
-  background-position: bottom;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: 1;
-}
+
+// @import "../../app.scss";
+
+// .parallax {
+//   width: 100%;
+//   height: 100%;
+//   position: relative;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   overflow: hidden;
+
+//   h1 {
+//     font-size: 100px;
+//   }
+
+//   .mountains {
+//     background-image: url("/mountains.png");
+//     background-size: cover;
+//     background-position: bottom;
+//     width: 100%;
+//     height: 100%;
+//     position: absolute;
+//     z-index: 3;
+
+//     background-repeat: no-repeat;
+//   }
+// }
+// .planets {
+//   background-size: cover;
+//   background-position: bottom;
+//   width: 100%;
+//   height: 100%;
+//   position: absolute;
+//   z-index: 2;
+// }
+// .stars {
+//   background-image: url("/stars.png");
+//   background-size: cover;
+//   background-position: bottom;
+//   width: 100%;
+//   height: 100%;
+//   position: absolute;
+//   z-index: 1;
+// }
