--- a/Desktop/AlandisWebsite/alandis-portfolio/src/components/portfolio/portfolio.scss
+++ b/Desktop/AlandisWebsite/alandis-portfolio/src/components/portfolio/portfolio.scss
@@ -12,6 +12,11 @@
     color: orange;
     font-size: 36px;
 
+    @include mobile {
+      padding-top: calc(100vh - 100px);
+      font-size: 24px;
+    }
+
     .progressBar {
       height: 10px;
       background-color: white;
@@ -35,14 +40,28 @@
       justify-content: center;
       gap: 50px;
 
+      @include mobile {
+        flex-direction: column;
+        gap: 10px;
+      }
+
       .imageContainer {
         flex: 1;
         height: 50%;
+
+        @include mobile {
+          width: 100%;
+          max-height: 300px;
+        }
 
         img {
           width: 100%;
           height: 100%;
           object-fit: cover;
+
+          @include mobile {
+            object-fit: contain;
+          }
         }
       }
 
@@ -52,13 +71,28 @@
         flex-direction: column;
         gap: 30px;
 
+        @include mobile {
+          transform: none !important;
+          padding: 10px;
+          align-items: center;
+          text-align: center;
+        }
+
         h2 {
           font-size: 72px;
+
+          @include mobile {
+            font-size: 36px;
+          }
         }
 
         p {
           color: gray;
           font-size: 20px;
+
+          @include mobile {
+            font-size: 16px;
+          }
         }
 
         button {
@@ -68,6 +102,10 @@
           padding: 10px;
           width: 200px;
           cursor: pointer;
+
+          // @include mobile {
+          //   padding: 5px;
+          // }
         }
       }
     }
