--- a/Desktop/AlandisWebsite/alandis-portfolio/src/components/sidebar/sidebar.scss
+++ b/Desktop/AlandisWebsite/alandis-portfolio/src/components/sidebar/sidebar.scss
@@ -16,7 +16,11 @@
     width: 400px;
     background: white;
 
-    .link {
+    @include mobile {
+      width: 200px;
+    }
+
+    .links {
       position: absolute;
       width: 100%;
       height: 100%;
@@ -28,6 +32,10 @@
 
       a {
         font-size: 40px;
+
+        @include mobile {
+          font-size: 20px;
+        }
       }
     }
   }
